--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,7 +16,7 @@
                 <div class="max-width">
                     <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
                     <ul class="menu">
-                        <li><a href="#">Resume</a>
+                        <li><a href="/documents/my_resume.pdf" download="Ebenezer's resume">Resume</a>
                         <li><a href="#">Projects</a>
                         <li><a href="#">Github</a>
                     </ul>
