Additional links added to index.html.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,7 +18,7 @@
                     <ul class="menu">
                         <li><a href="/documents/my_resume.pdf" download="Ebenezer's resume">Resume</a>
                         <li><a href="#">Projects</a>
-                        <li><a href="#">Github</a>
+                        <li><a href="https://github.com/emensah77" target="_blank">Github</a>
                     </ul>
                     <div class="menu-btn">
                         <i class="fas fa-bars"></i>
