--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -122,7 +122,10 @@
                 <div class="skills-content">
                     <div class="column left">
                         <div class="text">My Professional Skills</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, illum? Provident perspiciatis consectetur officiis autem facilis. Saepe dolor facilis hic dolorum, veritatis molestias quaerat quibusdam in dolores amet animi delectus at qui temporibus non sunt quasi quo pariatur aut ratione ad porro. Quasi nostrum voluptate, maxime laborum sequi repudiandae adipisci rem aliquid quibusdam consequatur nemo quia id quam soluta inventore.</p>
+                        <p>I am familiar with the programming languages on the right. My level of proficiency is based
+                            on my familiarity with each language and that includes frameworks associated with the language
+                            and the number of projects I have built with the language.
+                        </p>
                     </div>
                     <div class="column right">
                         <div class="bars">
