--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -86,7 +86,9 @@
                     <div class="card">
                         <div class="box">
                             <i class="fas fa-code"></i>
-                            <div class="text">Apps</div>
+                            <div class="text">Guessing game
+                                <img src="ebenezer.jpg"/>
+                            </div>
                             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolor numquam, aut ex velit, deserunt saepe, accusantium nostrum voluptates corporis vero enim veritatis eius non libero pariatur inventore quasi. Dolores.</p>
                         </div>
 
