--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -84,11 +84,10 @@
 
 
                     <div class="card">
+                        <img class="card-img-top" src="/images/eben.png" alt="Card image cap">
                         <div class="box">
                             <i class="fas fa-code"></i>
-                            <div class="text">Guessing game
-                                <img src="ebenezer.jpg"/>
-                            </div>
+                            <div class="text">Guessing game</div>
                             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolor numquam, aut ex velit, deserunt saepe, accusantium nostrum voluptates corporis vero enim veritatis eius non libero pariatur inventore quasi. Dolores.</p>
                         </div>
 
