--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -83,7 +83,7 @@
                     </div>
 
 
-                    <div class="card">
+                    <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="/images/eben.png" alt="Card image cap">
                         <div class="box">
                             <i class="fas fa-code"></i>
