--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -88,7 +88,10 @@
                         <div class="box">
                             <i class="fas fa-code"></i>
                             <div class="text">Guessing game</div>
-                            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolor numquam, aut ex velit, deserunt saepe, accusantium nostrum voluptates corporis vero enim veritatis eius non libero pariatur inventore quasi. Dolores.</p>
+                            <p class="par">This is a game developed for the android platform that pits a player against a computer. The 
+                                player tries to guess the number of the computer given some particular hints.
+                            </p>
+                            <a href="https://play.google.com/store/apps/details?id=com.eben.higherorlower" target="_blank" class="btn btn-primary">Go check it out</a>
                         </div>
 
                     </div>
