--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -87,11 +87,13 @@
                         <img class="card-img-top" src="/images/eben.png" alt="Card image cap">
                         <div class="box">
                             <i class="fas fa-code"></i>
+                            <div class="card-body">                            
                             <div class="text">Guessing game</div>
                             <p class="par">This is a game developed for the android platform that pits a player against a computer. The 
                                 player tries to guess the number of the computer given some particular hints.
                             </p>
                             <a href="https://play.google.com/store/apps/details?id=com.eben.higherorlower" target="_blank" class="btn btn-primary">Go check it out</a>
+                            </div>
                         </div>
 
                     </div>
