--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -99,14 +99,20 @@
                     </div>
 
 
-                    <div class="card">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="/images/eben.png" alt="Card image cap">
                         <div class="box">
                             <i class="fas fa-code"></i>
-                            <div class="text">Apps</div>
-                            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolor numquam, aut ex velit, deserunt saepe, accusantium nostrum voluptates corporis vero enim veritatis eius non libero pariatur inventore quasi. Dolores.</p>
+                            <div class="card-body">
+                            <div class="text">Currency converter</div>
+                            <p class="par">This is an app that converts US dollars to Ghanaian cedis.
+                            </p>
+                            <a href="https://play.google.com/store/apps/details?id=currency.com.slide" target="_blank" class="btn btn-primary">Go check it out</a>
+                            </div>
                         </div>
 
                     </div>
+
 
 
 
