--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,6 +6,7 @@
         <title>Ebenezer's Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </head>
@@ -40,6 +41,16 @@
             </div>
 
         </section>
+
+        <h1>Fetching data from Server using js</h1>
+        <p>This loads data from the server once webpage is loaded.</p>
+        <button onload="showServerMessage();">
+            Get message from server
+        </button>
+        <p id="date-container"></p>
+
+
+
         <!--about section start-->
         <section class="about" id="about">
             <div class="max-width">
@@ -63,7 +74,7 @@
             </div>
 
         </section>
-
+        
         <!--projects section start-->
         <section class="projects" id="projects">
             <div class="max-width">
@@ -162,6 +173,6 @@
             </div>
 
         </section>
-        <script src="script.js"></script>    
+            
     </body>
 </html>
