Updated script.js file to fetch message from server and index.html to display the fetched message when webpage is loaded.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -48,7 +48,7 @@
             Get message from server
         </button>
         <p id="date-container"></p>
-
+        <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
 
         <!--about section start-->
