--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -167,9 +167,9 @@
 
         </section>
     
-    <h1>Fetching data from Server using js</h1>
+        <h1>Fetching data from Server using js</h1>
         <p>This loads data from the server once webpage is loaded.</p>
-        <button onload="showServerMessage();">
+        <button onclick="showServerMessage();">
             Get message from server
         </button>
         <p id="date-container"></p>
