--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -42,13 +42,13 @@
 
         </section>
         <h1>Fetching data from Server using js</h1>
-        <p>This loads data from the server once webpage is loaded.</p>
+        <p>This loads data from the server once button is clicked.</p>
         <button onclick="showServerMessage();">
             Get message from server
         </button>
         <p id="date-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
-        
+
 
         <!--about section start-->
         <section class="about" id="about">
