Updated script.js file to fetch message from server and index.html to display the fetched message when webpage is loaded.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -44,9 +44,9 @@
         <h1>Fetching data from Server using js</h1>
         <p>This loads data from the server once button is clicked.</p>
         <button onclick="showServerMessage();">
-            Get message from server
+            Get message from server 
         </button>
-        <p id="date-container"></p>
+        <p id="message-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
 
