Converted Arraylist messages to json string.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -46,7 +46,7 @@
         <button onclick="showServerMessage();">
             Get message from server 
         </button>
-        <p id="messages-container"></p>
+        <p id="message-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
         <!--fetching messages from server and converting them to JSON-->
@@ -54,7 +54,7 @@
         <h1>Fun Messages</h1>
         <p>Click here to find funny messages about me:</p>
         <button onclick="getServerMessages()">Fetch Fun messages!</button>
-        <ul id="message-container"></ul>
+        <ul id="messages-container"></ul>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
         <!--about section start-->
         <section class="about" id="about">
