--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -46,7 +46,7 @@
         <button onclick="showServerMessage();">
             Get message from server 
         </button>
-        <p id="message-container"></p>
+        <p id="messages-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
         
