--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -43,10 +43,10 @@
         </section>
         <h1>Fetching data from Server using js</h1>
         <p>This loads data from the server once button is clicked.</p>
-        <button onclick="showServerMessage();">
+        <button onclick="getServerMessages();">
             Get message from server 
         </button>
-        <p id="messages-container"></p>
+        <p id="message-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
         
