--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -47,7 +47,7 @@
             Get message from server 
         </button>
 <p>How to loop through all properties in a JSON object.</p>        
-        <ul id="messages-container"></ul>
+        <p id="messages-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
         
