--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -43,7 +43,7 @@
         </section>
         <h1>Fetching data from Server using js</h1>
         <p>This loads data from the server once button is clicked.</p>
-        <button onclick="getServerMessages()">
+        <button onclick="showServerMessage()">
             Get message from server 
         </button>
 <p>How to loop through all properties in a JSON object.</p>        
