Added a ClientMessagesServlet that retrieves messages stored on datastore.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -52,10 +52,15 @@
                         <button  id="but" onclick="showServerMessage()">
                             Click to generate random fun messages 
                         </button>
+
+                        <button  id="but" onclick="getServerMessages()">
+                            Click to see messages in DataStore 
+                        </button>                        
             </div>
         </section>
                 
         <p style="text-align: center;  font-size: 24px; font-weight: bold; color: blue;" id="messages-container"></p>
+        <p style="text-align: center;  font-size: 24px; font-weight: bold; color: blue;" id="message-container"></p>
         <p>Click <a href="/new">here</a> to see the server response directly.</p>
 
         
