--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,7 +11,12 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </head>
     <body>
-
+            <!--Splash screen-->
+            <div class="intro">
+                <h1 class="splash-header">
+                    <span class="splash">Wel</span><span class="splash">come.</span>
+                </h1>
+            </div>
         
             <nav class="navbar">
                 <div class="max-width">
