Added a map to portfolio.

--- a/walkthroughs/week-3-libraries/maps/examples/hello-world/src/main/webapp/index.html
+++ b/walkthroughs/week-3-libraries/maps/examples/hello-world/src/main/webapp/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Hello Google Maps</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
-  <script src="script.js"></script>
+  
   <link rel="stylesheet" href="style.css">
 </head>
 <body onload="createMap();">
   <h1>Hello Google Maps</h1>
-  <div id="map"></div>
+  <div id="map" style="width: 300px; height: 300px;"></div>
   <p>This page shows a Google Map!</p>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxZgLwG0rcUDyEozyUoOytdXB5iZHhJu0"></script>
+  <script src="script.js"></script>
 </body>
 </html>
